# 2llteacher

./: -  ACEM_DESIGN_101.md  ACEM_DESIGN_121.md  ACEM_DESIGN_123.md  ACEM_DESIGN_130.md  ACEM_DESIGN_38.md  ACEM_DESIGN_42.md  ACEM_DESIGN_44.md  ACEM_DESIGN_47.md  ACEM_DESIGN_50.md  ACEM_DESIGN_56.md  ACEM_DESIGN_63.md  ACEM_DESIGN_66.md  ACEM_DESIGN_90.md  ACEM_DESIGN_92.md  CLAUDE.md  DATABASE_POPULATION.md  DOCKER.md  Dockerfile  LICENSE  README.md  TESTING.md  WORKSPACE_STRUCTURE.md  docker-entrypoint.sh  manage.py  pyproject.toml  run_tests.py  test_mypy.py  test_script.py
.clinerules/: AGENT.md
.github/workflows/: ci.yml
src/accounts/: admin.py  canvas_service.py  email_service.py  forms.py  models.py  urls.py  views.py
src/canvas/: admin.py  canvas_service.py  models.py  urls.py  views.py
src/chat/: admin.py  apps.py  models.py  services.py  urls.py  views.py
src/conversations/: admin.py  forms.py  models.py  services.py  urls.py  views.py
src/courses/: admin.py  enums.py  forms.py  models.py  urls.py  views.py
src/homeworks/: admin.py  forms.py  models.py  services.py  urls.py  views.py
src/llm/: admin.py  models.py  services.py  urls.py  views.py
src/llteacher/: asgi.py  context_processors.py  production.py  settings.py  test_settings.py  tracing.py  urls.py  views.py  wsgi.py
src/rag/: admin.py  apps.py  forms.py  huey.py  models.py  sqlite_vector_extension.py  tasks.py  urls.py  views.py
static/css/: auth.css  conversation-detail.css  main.css  r-execution.css  student.css  teacher.css
templates/: base.html  homepage.html
(+202 files in other folders)
