[project]
name = "llteacher"
version = "2.0.0"
description = "AI-assisted educational platform for teachers and students"
authors = [{ name = "LLTeacher Team", email = "team@llteacher.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.13",
    "gunicorn",
    "python-dotenv",
    "python-json-logger",
    "requests",
    "whitenoise",
    "django-stubs>=5.2.7",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-django",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-sqlite3",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["llteacher", "accounts", "conversations", "homeworks", "llm"]

[tool.uv]
dev-dependencies = ["pytest", "pytest-django", "ruff", "mypy", "coverage"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "src/llteacher/test_settings.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "llteacher.settings"
